Changelog: - Fix dashboard chart alignment issues. - Update visual appearance of dashboard charts.

--- a/client/style.css
+++ b/client/style.css
@@ -908,19 +908,35 @@ td:first-child{
 }
 
 /*charts*/
-.charts{
-    background-color: #fff;
+/* .charts{
     border-radius: 20px;
-    width: 50%;
+    width: fit-content;
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    height: 300px;
+} */
 
 .charts-container {
     display: flex;
     flex-direction: row;
     column-gap: 10px;
+}
+
+.chart-bubble {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    border-radius: 20px;
+    width: 50%;
+    height: fit-content;
+}
+
+.chart-header {
+    margin: 0px;
 }
 
 /*courses*/
